[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "tick-hz-32_768"] }
embassy-sync = "0.6"
embassy-futures = "0.1"

embassy-stm32 = { version = "0.1.0", features = [
    "stm32l432kc",
    "defmt",
    "time-driver-any",
    "unstable-pac",
    "memory-x",
]}

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8"
bitfield = "0.14"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
debug = true
